For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

=== Added

* Allow storage of sync tab selection to be configured using `tabs-sync-storage-key` and `tabs-sync-storage-scope` document attributes
* Add `is-loaded` class to tabs blocks on next tick after initialization for binding transitions (#50)

=== Changed

* Rename data-sync-group attribute to data-sync-group-id
* Don't lowercase sync group ID

== 1.0.0-beta.2 (2023-01-30) - @mojavelinux

=== Changed

* Only sync congruent tabs blocks (i.e., tabs blocks that have the same tablist) (#47)
* Store sync tab selection by sync group (e.g., `preferred-tab-a|b|c`) (#47)

=== Fixed

* Turn off :focus-visible outline on tab selected by URL fragment

=== Details

{url-repo}/releases/tag/v1.0.0-beta.2[git tag] | {url-repo}/compare/v1.0.0-beta.1\...v1.0.0-beta.2[full diff]

== 1.0.0-beta.1 (2023-01-30) - @mojavelinux

=== Added

* Pass through role attribute on tabs block (#43)
* Add configuration option to save sync selection (i.e., sync ID) in local or session storage (#44)

=== Fixed

* Use correct selector to unhide panel of first tab while tabs are loading

=== Details

{url-repo}/releases/tag/v1.0.0-beta.1[git tag] | {url-repo}/compare/v1.0.0-alpha.12\...v1.0.0-beta.1[full diff]

== 1.0.0-alpha.12 (2022-12-23) - @mojavelinux

=== Fixed

* Wrap div with class `tablecontainer` around tables inside tabpanel to prevent tables from overflowing bounds while honoring width (#41)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.12[git tag] | {url-repo}/compare/v1.0.0-alpha.11\...v1.0.0-alpha.12[full diff]

== 1.0.0-alpha.11 (2022-12-08) - @mojavelinux

=== Changed

* *BREAKING CHANGE:* Align terminology with ARIA / Open UI recommendations for a tabs component; requires change to custom CSS (#38)
 ** `.tabset` becomes `.tabs`
 ** `.tabs` becomes `.tablist`
 ** `.tab-panel` becomes `.tabpanel`
 ** `.is-active` for selected tab becomes `.is-selected`